# vacuum

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  btcusdt.json  config-example.yaml  config.yaml.example  docker-entrypoint.sh  pyproject.toml  setup.cfg  skaffold.yaml
.github/workflows/: main.yml
charts/: grafana-values.yaml  grafana.yaml  postgresql-values.yaml  postgresql.yaml  timescaledb.yaml
charts/grubbin/: Chart.yaml  values.yaml
charts/timescaledb-secrets/: credentials.conf  kustomization.yaml  tls.crt  tls.key
charts/timescaledb-single/: Chart.yaml  README.md  admin-guide.md  generate_kustomization.sh  values.yaml
charts/vacuum/: Chart.yaml  values.yaml
dashboards/: BTCUSDT.json  BTC_USDT.json
monitoring/: grafana-values.yaml  influxdb-values.yaml  postgresql-values.yaml
scripts/: create-namespace  docker-build  docker-run  forward-grafana-port  forward-influxdb-port  forward-ports  forward-postgresql-port  install-charts  install-monitoring  minikube-start  prepare-charts  reprovision  seed-database  skaffold-dev
sql/: create_candles_table.sql  dashboard-attempt-1.sql  dashboard-attempt-2.sql  dashboard-attempt-3.sql  dashboards.sql  schema.sql  schema.sql.j2  seed.sql
src/grubbin/: __main__.py  apis.py  binance.py  config.py  console.py  fetcher.py  influxdb.py  inserter.py  logger.py  main.py  models.py  postgres.py  postgresql.py  streamer.py  utilities.py  webserver.py
src/vacuum/: __init__.py  console.py  fetcher.py  inserter.py  logger.py  postgres.py  state.py  (+3 more)
tests/: test_console.py
(+19 files in other folders)
